# AndroidAccessory

./: README
Android/UsbAccessory/MyApplication/app/: build.gradle
Android/UsbAccessory/MyApplication/app/src/androidTest/java/com/example/zwk/myapplication/: ExampleInstrumentedTest.java
Android/UsbAccessory/MyApplication/app/src/main/: AndroidManifest.xml
Android/UsbAccessory/MyApplication/app/src/main/java/com/example/zwk/myapplication/: MainActivity.java
Android/UsbAccessory/MyApplication/app/src/test/java/com/example/zwk/myapplication/: ExampleUnitTest.java
Android/UsbAccessory/MyApplication/gradle/wrapper/: gradle-wrapper.properties
Android/UsbAccessory/app/: local.properties
Android/UsbAccessory/app/gradle/wrapper/: gradle-wrapper.properties
Android/UsbAccessory/app/src/main/java/com/gavinandre/usbaccessory/: AccessoryCommunicator.java
Android/UsbAccessory/app/src/main/res/xml/: accessory_filter.xml
cpp/: CMakeLists.txt  androidaccessory.cpp  androidaccessory.h  test.cpp
cpp/cmake/: FindUSB1.cmake
